--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,12 @@
     padding: 0;
 }
 .site-header{
+    min-height: 80vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     padding: 50px 0px;
+    width: 90%;
+    margin: auto;
 }
 .hamburger{
     display: none;
@@ -189,7 +191,8 @@ header {
 }
 header img{
     margin:auto;
-    max-width: 400px;
+    width: 80%;
+    height: 40vh;
     display: block;
 }
 #fig-img{
@@ -276,6 +279,9 @@ fieldset{
 /*media queries*/
 
 @media screen and (max-width: 800px){
+    .site-header{
+        flex-wrap: wrap;
+    }
     .col{
         padding: 0.5rem;
     }
