fix: footer link

--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -159,7 +159,7 @@
                 <a href="mailto:nehaguptang.ng@gmail.com">
                     <i class="fa fa-envelope" title="envelope" alt="envelope"></i>
                 </a>
-                <a href="https://www.github/nayyyhaa">
+                <a href="https://www.github.com/nayyyhaa">
                     <i class="fa fa-github" title="github" alt="github"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/nayyyhaa/">
