feat: flex-projects

--- a/components/blogs/blogs.html
+++ b/components/blogs/blogs.html
@@ -41,9 +41,9 @@
             </h3>
         </header>
 
-        <ul class="no-bullet container">
+        <ul class="no-bullet container-blog">
             <li>
-                <article class="article">
+                <article class="article-blog">
                     <h2>Build your own Shakespeare Translation Web App with JavaScript Fetch API</h2>
                     <small>April, 2021</small>
                     <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??
