--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -49,7 +49,7 @@
 
         <ul class="no-bullet container">
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>Travel with me</h2>
                     <small>April, 2021</small>
                     <p>Confused about where to travel next? This vacation destination recommendation app is your solution</p>
@@ -59,7 +59,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>Emoji Jungle</h2>
                     <small>April, 2021</small>
                     <p>Dunno what are these emojis? Worry not! This emoji-pedia is there to help you.</p>
@@ -69,7 +69,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>Shakespeare Translator</h2>
                     <small>April, 2021</small>
                     <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??</p>
@@ -79,7 +79,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>Minion Speaks</h2>
                     <small>April, 2021</small>
                     <p>This app converts your English text into equivalent Minionese text.</p>
@@ -88,7 +88,8 @@
                     <a href="https://github.com/nayyyhaa/minion-speaks" class="secondary-link">View Source</a>
                 </article>
             </li>
-                <article class="article">
+            <li>
+                <article class="article -ow">
                     <h2>Find My Destiny</h2>
                     <small>April, 2021</small>
                     <p>Can you guess the correct number between 1 - 100?</p>
@@ -98,7 +99,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>NeneXone</h2>
                     <small>March, 2021</small>
                     <p>Love to shop? Then check out the website that I made.</p>
@@ -108,7 +109,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>My Piggy Bank</h2>
                     <small>March, 2021</small>
                     <p>Always have trouble while managing your expenses? Worry not! MyPiggyBank is a web application helping you with finances.</p> 
@@ -118,7 +119,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>Words Jungle</h2>
                     <small>March, 2021</small>
                     <p>I struggle with understanding the meaning of some words. Do you too? If yes, then see this dictionary-app.</p> 
@@ -128,7 +129,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>What's the Capital quiz</h2>
                     <small>March, 2021</small>
                     <p>ake The Quiz: How Many Capital Cities Can You Name?</p>
@@ -139,7 +140,7 @@
                 </article>
             </li>
             <li>
-                <article class="article">
+                <article class="article -ow">
                     <h2>Do you know me?</h2>
                     <small>March, 2021</small>
                     <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>      
