--- a/css/main.css
+++ b/css/main.css
@@ -280,6 +280,10 @@ fieldset{
 /*Contact page*/
 
 #connect{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     min-height: 30vh;
     color: white;
     background: var(--primary-color);
