--- a/components/about/index.html
+++ b/components/about/index.html
@@ -19,13 +19,13 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/components/about/about.html" class="active">About</a>
+                    <a href="/components/about/" class="active">About</a>
                 </li>
                 <li>
-                    <a href="/components/projects/projects.html">Projects</a>
+                    <a href="/components/projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="/components/blogs/blogs.html">Blogs</a>
+                    <a href="/components/blogs/">Blogs</a>
                 </li>
             </ul>
         </div>
