--- a/components/projects/index.html
+++ b/components/projects/index.html
@@ -28,13 +28,13 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/components/about/about.html">About</a>
+                    <a href="/components/about/">About</a>
                 </li>
                 <li>
-                    <a href="/components/projects/projects.html" class="active">Projects</a>
+                    <a href="/components/projects/" class="active">Projects</a>
                 </li>
                 <li>
-                    <a href="/components/blogs/blogs.html">Blogs</a>
+                    <a href="/components/blogs/">Blogs</a>
                 </li>
             </ul>
         </div>
