--- a/components/blogs/index.html
+++ b/components/blogs/index.html
@@ -19,13 +19,13 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/components/about/about.html">About</a>
+                    <a href="/components/about/">About</a>
                 </li>
                 <li>
-                    <a href="/components/projects/projects.html">Projects</a>
+                    <a href="/components/projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="/components/blogs/blogs.html" class="active">Blogs</a>
+                    <a href="/components/blogs/" class="active">Blogs</a>
                 </li>
             </ul>
         </div>
