--- a/components/projects/index.html
+++ b/components/projects/index.html
@@ -50,6 +50,14 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article -ow">
+                    <h2>Planet JS</h2>
+                    <small>May, 2021</small>
+                    <p>Here I've compiled all my projects made with using Vanilla JS.</p>       
+                    <a href="/components/projects/PlanetJS.html" class="primary-link">Live Project</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
                     <h2>Travel with me</h2>
                     <small>April, 2021</small>
                     <p>Confused about where to travel next? This vacation destination recommendation app is your solution</p>
@@ -70,36 +78,6 @@
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>Shakespeare Translator</h2>
-                    <small>April, 2021</small>
-                    <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??</p>
-                    <p>This translator takes English as input and converts to Shakespeare English. Created using VanillaJs.</p>       
-                    <a href="https://iamshakespeare.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/shakespeare-translator" class="secondary-link">View Source</a>
-                </article>
-            </li>
-            <li>
-                <article class="article -ow">
-                    <h2>Minion Speaks</h2>
-                    <small>April, 2021</small>
-                    <p>This app converts your English text into equivalent Minionese text.</p>
-                    <p>Made using ReactJS with love.</p>       
-                    <a href="https://letsbanana.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/minion-speaks" class="secondary-link">View Source</a>
-                </article>
-            </li>
-            <li>
-                <article class="article -ow">
-                    <h2>Find My Destiny</h2>
-                    <small>April, 2021</small>
-                    <p>Can you guess the correct number between 1 - 100?</p>
-                    <p>It's a simple app created with concepts of VanillaJs</p>       
-                    <a href="https://find-my-destiny.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/guess-the-number-game" class="secondary-link">View Source</a>
-                </article>
-            </li>
-            <li>
-                <article class="article -ow">
                     <h2>NeneXone</h2>
                     <small>March, 2021</small>
                     <p>Love to shop? Then check out the website that I made.</p>
@@ -110,42 +88,12 @@
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>My Piggy Bank</h2>
-                    <small>March, 2021</small>
-                    <p>Always have trouble while managing your expenses? Worry not! MyPiggyBank is a web application helping you with finances.</p> 
-                    <p>This website is created using VanillaJs.</p>      
-                    <a href="https://mypiggybank.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/MyPiggyBank" class="secondary-link">View Source</a>
-                </article>
-            </li>
-            <li>
-                <article class="article -ow">
                     <h2>Words Jungle</h2>
                     <small>March, 2021</small>
                     <p>I struggle with understanding the meaning of some words. Do you too? If yes, then see this dictionary-app.</p> 
                     <p>Made using ReactJS with love.</p>      
                     <a href="https://words-jungle.netlify.app/" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/dictionary-app" class="secondary-link">View Source</a>
-                </article>
-            </li>
-            <li>
-                <article class="article -ow">
-                    <h2>What's the Capital quiz</h2>
-                    <small>March, 2021</small>
-                    <p>ake The Quiz: How Many Capital Cities Can You Name?</p>
-
-                    <p>This is a CLI App in Javascript using Chalk Library for terminal string styling.</p>      
-                    <a href="https://replit.com/@nayyyhaa/whats-the-capital-quiz?embed=1&output" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/what-s-the-capital-quiz" class="secondary-link">View Source</a>
-                </article>
-            </li>
-            <li>
-                <article class="article -ow">
-                    <h2>Do you know me?</h2>
-                    <small>March, 2021</small>
-                    <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>      
-                    <a href="https://replit.com/@nayyyhaa/Kaun-hai-Neha?embed=1&output" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/do-you-know-me" class="secondary-link">View Source</a>
                 </article>
             </li>
         </ul>
