fix: weathify link

--- a/components/projects/PlanetJS.html
+++ b/components/projects/PlanetJS.html
@@ -158,8 +158,8 @@
                     <small>May, 2021</small>
                     <p>Weather app made using HTML, CSS, VanillaJs & OpenWeatherMap API</p>
                     <p>Features: get weather information by location via GPS ,search weather for specific place, change the UI to dark/light mode</p>       
-                    <a href="https://tasks2do.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/To-do-App" class="secondary-link">View Source</a>
+                    <a href="https://weathify.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/weather-app" class="secondary-link">View Source</a>
                 </article>
             </li>
             <li>
