--- a/components/projects/PlanetJS.html
+++ b/components/projects/PlanetJS.html
@@ -145,6 +145,16 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article -ow">
+                    <h2>Color Splash</h2>
+                    <small>May, 2021</small>
+                    <p>I made a clone of coolors website (generate feature) using Vanilla JS and chroma library.</p>
+                    <p>Features: generate different color palettes, copy, customise & lock the specific color, save the palette in Local Storage, access saved color palettes from the library.</p>
+                    <a href="https://colorsplash.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/my-color-palette" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
                     <h2>Make my Music</h2>
                     <small>May, 2021</small>
                     <p>Make My Music is a beatmaker app which is made with the concepts of HTML, CSS and JavaScript</p>
