add: JS projects

--- a/components/projects/PlanetJS.html
+++ b/components/projects/PlanetJS.html
@@ -145,6 +145,33 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article -ow">
+                    <h2>Stock n' Shock</h2>
+                    <small>September, 2021</small>
+                    <p>This is a vanillaJS project to check if the user has inccured profit or loss in his/her stock purchase.</p>
+                    <a href="https://stocknshock.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/stock-n-shock" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Triangle-o-thon</h2>
+                    <small>September, 2021</small>
+                    <p>This is Vanilla Js project to teach you all about the world.</p>
+                    <a href="https://triangleothon.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/triangle-o-thon" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>Palindrome Birthday</h2>
+                    <small>August, 2021</small>
+                    <p>This is Vanilla Js project to validate if your birthday is a palindrome a not.</p>
+                    <a href="https://bdayreverse.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/birthday-palindrome" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
                     <h2>Color Splash</h2>
                     <small>May, 2021</small>
                     <p>I made a clone of coolors website (generate feature) using Vanilla JS and chroma library.</p>
