--- a/components/blogs/index.html
+++ b/components/blogs/index.html
@@ -44,6 +44,16 @@
         <ul class="no-bullet container-blog">
             <li>
                 <article class="article-blog">
+                    <h2>Everything you need to know about Execution Context in JavaScript</h2>
+                    <small>September, 2021</small>
+                    <p>Wherever you write your code in JavaScript, Execution Context is the first things that gets created. In this article
+                        you'll learn everything you need to know about Execution Context.
+                    </p>       
+                    <a href="https://dev.to/nayyyhaa/everything-you-need-to-know-about-execution-context-in-javascript-2jha" class="primary-link">Read blog</a>
+                </article>
+            </li>
+            <li>
+                <article class="article-blog">
                     <h2>Build your own Shakespeare Translation Web App with JavaScript Fetch API</h2>
                     <small>April, 2021</small>
                     <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??
