--- a/components/projects/index.html
+++ b/components/projects/index.html
@@ -50,6 +50,15 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article -ow">
+                    <h2>NeoG Projects</h2>
+                    <small>September, 2021</small>
+                    <p>Here are all that projects that I've made in neoG camp</p>
+                    <p>Tech Stack: HTML, CSS, Javascript, React</p>       
+                    <a href="/components/projects/neoG.html" class="primary-link">Live Projects</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
                     <h2>Planet JS</h2>
                     <small>May, 2021</small>
                     <p>Here I've compiled all my projects made with using Vanilla JS.</p>       
@@ -58,6 +67,26 @@
             </li>
             <li>
                 <article class="article -ow">
+                    <h2>Instagram Clone</h2>
+                    <small>July, 2021</small>
+                    <p>This is an instagram clone (user profile page) that I've made using ReactJS and Redux</p>
+                    <a href="https://itsinstaclone.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/instagram-clone" class="secondary-link">View Source</a>
+                </article>
+            </li>
+             <li>
+                <article class="article -ow">
+                    <h2>Color Splash</h2>
+                    <small>May, 2021</small>
+                    <p>I made a clone of coolors website (generate feature) using Vanilla JS and chroma library.</p>
+                    <p>Features: generate different color palettes, copy, customise & lock the specific color, save the palette in Local Storage, access saved color palettes from the library.</p>
+                    <a href="https://colorsplash.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/my-color-palette" class="secondary-link">View Source</a>
+                </article>
+            </li>
+
+            <!-- <li>
+                <article class="article -ow">
                     <h2>Travel with me</h2>
                     <small>April, 2021</small>
                     <p>Confused about where to travel next? This vacation destination recommendation app is your solution</p>
@@ -65,8 +94,8 @@
                     <a href="https://travelalong.netlify.app/" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/travel-recommendation" class="secondary-link">View Source</a>
                 </article>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
                 <article class="article -ow">
                     <h2>Emoji Jungle</h2>
                     <small>April, 2021</small>
@@ -75,7 +104,7 @@
                     <a href="https://7uk7s.csb.app/" class="primary-link">Live Project</a>
                     <a href="https://codesandbox.io/s/emoji-predictor-7uk7s" class="secondary-link">View Source</a>
                 </article>
-            </li>
+            </li> -->
             <li>
                 <article class="article -ow">
                     <h2>NeneXone</h2>
