--- a/components/projects/neoG.html
+++ b/components/projects/neoG.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Neha Gupta | Planetjs</title>
+    <title>Neha Gupta | neoG camp</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="../../css/main.css" rel="stylesheet">
     <link href="../../css/planetjs.css" rel="stylesheet">
@@ -36,7 +36,7 @@
                 <a href="/components/projects">&lt;&lt;Go back</a>
             </p>
             <h1>
-                Welcome to <span class="colored-text">Planet JS!</span>
+                Welcome to <span class="colored-text">neoG camp </span>projects page!
             </h1>
             <svg width="1030" height="717" viewBox="0 0 1030 717" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="undraw_static_assets_rpm6 1" clip-path="url(#clip0)">
@@ -136,7 +136,7 @@
                 </defs>
             </svg>
             <h3>
-                Here you'll find all my projects which I made using the simple concepts of <span class="colored-text">HTML, CSS and Vanilla JS.</span>
+                Here you'll find all my projects which I made using the simple concepts of <span class="colored-text">HTML, CSS, Vanilla JS and React.</span>
             </h3>
 
             
@@ -145,16 +145,15 @@
         <ul class="no-bullet container">
             <li>
                 <article class="article -ow">
-                    <h2>Paranoma App</h2>
-                    <small>July, 2021</small>
-                    <p>This is a vanillaJS project where user can search and download any images.</p>
-                    <a href="https://panorama-app.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/panorama-app" class="secondary-link">View Source</a>
+                    <h2>markFifteen: Blogs</h2>
+                    <small>September, 2021</small>
+                    <p>I like to document my learning. Checkout few blogs that I've written.</p>
+                    <a href="https://nehagupta.netlify.app/components/blogs/" class="primary-link">Read Blogs</a>
                 </article>
             </li>
-            <!-- <li>
+            <li>
                 <article class="article -ow">
-                    <h2>Stock n' Shock</h2>
+                    <h2>markFourteen: Stock n' Shock</h2>
                     <small>September, 2021</small>
                     <p>This is a vanillaJS project to check if the user has inccured profit or loss in his/her stock purchase.</p>
                     <a href="https://stocknshock.netlify.app/" class="primary-link">Live Project</a>
@@ -163,7 +162,16 @@
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>Triangle-o-thon</h2>
+                    <h2>markThirteen: Palindrome Birthday</h2>
+                    <small>August, 2021</small>
+                    <p>This is Vanilla Js project to validate if your birthday is a palindrome a not.</p>
+                    <a href="https://bdayreverse.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/birthday-palindrome" class="secondary-link">View Source</a>
+                </article>
+            </li>
+            <li>
+                <article class="article -ow">
+                    <h2>markTwelve: Triangle-o-thon</h2>
                     <small>September, 2021</small>
                     <p>This is Vanilla Js project to teach you all about the world.</p>
                     <a href="https://triangleothon.netlify.app/" class="primary-link">Live Project</a>
@@ -172,65 +180,45 @@
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>Palindrome Birthday</h2>
+                    <h2>markEleven: Is your birthday Lucky?</h2>
                     <small>August, 2021</small>
-                    <p>This is Vanilla Js project to validate if your birthday is a palindrome a not.</p>
-                    <a href="https://bdayreverse.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/birthday-palindrome" class="secondary-link">View Source</a>
-                </article>
-            </li> -->
-            <!-- <li>
-                <article class="article -ow">
-                    <h2>Color Splash</h2>
-                    <small>May, 2021</small>
-                    <p>I made a clone of coolors website (generate feature) using Vanilla JS and chroma library.</p>
-                    <p>Features: generate different color palettes, copy, customise & lock the specific color, save the palette in Local Storage, access saved color palettes from the library.</p>
-                    <a href="https://colorsplash.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/my-color-palette" class="secondary-link">View Source</a>
-                </article>
-            </li> -->
-            <li>
-                <article class="article -ow">
-                    <h2>Make my Music</h2>
-                    <small>May, 2021</small>
-                    <p>Make My Music is a beatmaker app which is made with the concepts of HTML, CSS and JavaScript</p>
-                    <a href="https://makemymusic.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/make-my-music" class="secondary-link">View Source</a>
+                    <p>This is a Vanilla JS app that checks if your birthday is lucky or not.</p>
+                    <a href="https://trustyourluck.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/is-your-birthday-lucky" class="secondary-link">View Source</a>
                 </article>
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>Weathify</h2>
-                    <small>May, 2021</small>
-                    <p>Weather app made using HTML, CSS, VanillaJs & OpenWeatherMap API</p>
-                    <p>Features: get weather information by location via GPS ,search weather for specific place, change the UI to dark/light mode</p>       
-                    <a href="https://weathify.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/weather-app" class="secondary-link">View Source</a>
+                    <h2>markTen: Cash Register App</h2>
+                    <small>August, 2021</small>
+                    <p>This is an cash register application made using ReactJS.</p>
+                    <a href="https://billplease.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/cash-register" class="secondary-link">View Source</a>
                 </article>
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>Tasks-2-DO</h2>
-                    <small>May, 2021</small>
-                    <p>Organize your tasks with this To-do App which I've made.</p>
-                    <p>Features: Add, Delete, Filtering todos based on tasks completed, pending. Local Storage is also available.</p>       
-                    <a href="https://tasks2do.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/To-do-App" class="secondary-link">View Source</a>
+                    <h2>markNine: Travel with me</h2>
+                    <small>April, 2021</small>
+                    <p>Confused about where to travel next? This vacation destination recommendation app is your solution</p>
+                    <p>Made using ReactJS with love.</p>       
+                    <a href="https://travelalong.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/travel-recommendation" class="secondary-link">View Source</a>
                 </article>
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>Piano Simulation</h2>
-                    <small>May, 2021</small>
-                    <p>Always wanted to buy my own piano, but instead I build one.</p>
-                    <p>This is a virtual piano SIM made with JS concepts.</p>       
-                    <a href="https://pianosimulation.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/piano-simulation" class="secondary-link">View Source</a>
+                    <h2>markEight: Emoji Jungle</h2>
+                    <small>April, 2021</small>
+                    <p>Dunno what are these emojis? Worry not! This emoji-pedia is there to help you.</p>
+                    <p>Made using ReactJS with love.</p>       
+                    <a href="https://7uk7s.csb.app/" class="primary-link">Live Project</a>
+                    <a href="https://codesandbox.io/s/emoji-predictor-7uk7s" class="secondary-link">View Source</a>
                 </article>
             </li>
-            <!-- <li>
+            <li>
                 <article class="article -ow">
-                    <h2>Shakespeare Translator</h2>
+                    <h2>markSeven: Shakespeare Translator</h2>
                     <small>April, 2021</small>
                     <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??</p>
                     <p>This translator takes English as input and converts to Shakespeare English. Created using VanillaJs.</p>       
@@ -240,54 +228,43 @@
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>Minion Speaks</h2>
+                    <h2>markSix: Minion Speaks</h2>
                     <small>April, 2021</small>
                     <p>This app converts your English text into equivalent Minionese text.</p>
                     <p>Made using VanillaJs with love.</p>       
                     <a href="https://letsbanana.netlify.app/" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/minion-speaks" class="secondary-link">View Source</a>
                 </article>
-            </li> -->
+            </li>
             <li>
                 <article class="article -ow">
-                    <h2>Find My Destiny</h2>
-                    <small>April, 2021</small>
-                    <p>Can you guess the correct number between 1 - 100?</p>
-                    <p>It's a simple app created with concepts of VanillaJs</p>       
-                    <a href="https://find-my-destiny.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/guess-the-number-game" class="secondary-link">View Source</a>
+                    <h2>markThree: Portfolio Website</h2>
+                    <small>March, 2021</small>
+                    <p>Here's the portfolio website that I've made using HTML, CSS and VanillaJS.</p>  
+                    <a href="https://nehagupta.netlify.app/" class="primary-link">Live Project</a>
+                    <a href="https://github.com/nayyyhaa/nehagupta.netlify.app" class="secondary-link">View Source</a>
                 </article>
             </li>
             <li>
                 <article class="article -ow">
-                    <h2>My Piggy Bank</h2>
+                    <h2>markTwo: What's the Capital quiz</h2>
                     <small>March, 2021</small>
-                    <p>Always have trouble while managing your expenses? Worry not! MyPiggyBank is a web application helping you with finances.</p> 
-                    <p>This website is created using VanillaJs.</p>      
-                    <a href="https://mypiggybank.netlify.app/" class="primary-link">Live Project</a>
-                    <a href="https://github.com/nayyyhaa/MyPiggyBank" class="secondary-link">View Source</a>
-                </article>
-            </li>
-            <!-- <li>
-                <article class="article -ow">
-                    <h2>What's the Capital quiz</h2>
-                    <small>March, 2021</small>
-                    <p>ake The Quiz: How Many Capital Cities Can You Name?</p>
+                    <p>Take The Quiz: How Many Capital Cities Can You Name?</p>
 
                     <p>This is a CLI App in Javascript using Chalk Library for terminal string styling.</p>      
                     <a href="https://replit.com/@nayyyhaa/whats-the-capital-quiz?embed=1&output" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/what-s-the-capital-quiz" class="secondary-link">View Source</a>
                 </article>
-            </li> -->
-            <!-- <li>
+            </li>
+            <li>
                 <article class="article -ow">
-                    <h2>Do you know me?</h2>
+                    <h2>markOne: Do you know me?</h2>
                     <small>March, 2021</small>
                     <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>      
                     <a href="https://replit.com/@nayyyhaa/Kaun-hai-Neha?embed=1&output" class="primary-link">Live Project</a>
                     <a href="https://github.com/nayyyhaa/do-you-know-me" class="secondary-link">View Source</a>
                 </article>
-            </li> -->
+            </li>
         </ul>
         
     <footer class="footer" id="connect">
