--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ fieldset{
   }
   .back-text a {
       text-decoration: none;
-      color: var(--secondary-color)
+      color: var(--text-color);
   }
 /*media queries*/
 
