--- a/components/blogs/index.html
+++ b/components/blogs/index.html
@@ -44,9 +44,20 @@
         <ul class="no-bullet container-blog">
             <li>
                 <article class="article-blog">
+                    <h2>CSS Box Model</h2>
+                    <small>September, 2021</small>
+                    <p>
+                        All the HTML elements are considered as boxes in our CSS file. And, how these boxes are aligned in our web page is answered by <strong>CSS Box Model</strong>.
+                    </p>       
+                    <a href="https://dev.to/nayyyhaa/css-box-model-ibg" class="primary-link">Read blog</a>
+                </article>
+            </li>
+            <li>
+                <article class="article-blog">
                     <h2>Everything you need to know about Execution Context in JavaScript</h2>
                     <small>September, 2021</small>
-                    <p>Wherever you write your code in JavaScript, Execution Context is the first things that gets created. In this article
+                    <p>
+                        Wherever you write your code in JavaScript, Execution Context is the first things that gets created. In this article
                         you'll learn everything you need to know about Execution Context.
                     </p>       
                     <a href="https://dev.to/nayyyhaa/everything-you-need-to-know-about-execution-context-in-javascript-2jha" class="primary-link">Read blog</a>
@@ -56,7 +67,8 @@
                 <article class="article-blog">
                     <h2>Build your own Shakespeare Translation Web App with JavaScript Fetch API</h2>
                     <small>April, 2021</small>
-                    <p>I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??
+                    <p>
+                        I've always been curious about how Shakespeare would've expressed my thoughts in his words. Have you been too??
                         Learn how to build English to Shakespeare text translator using with JavaScript Fetch API.
                     </p>       
                     <a href="https://dev.to/nayyyhaa/build-your-own-shakespeare-translation-web-app-with-javascript-fetch-api-loo" class="primary-link">Read blog</a>
